<resources>
    <string name="app_name">M17 HT</string>
    <string name="push_to_talk">Transmit</string>
    <string name="call_sign_hint">Call Sign</string>
    <string name="received_call_sign">Caller</string>
    <string name="bluetooth_label">Bluetooth</string>
    <string name="usb_label">USB</string>
    <string name="connect_label">Connect</string>
    <string name="disconnect_label">Disconnect</string>
    <string name="connecting_label">Connecting...</string>
    <string name="ble_denied_label">BLE Denied</string>
    <string name="not_connected_label">Not Connected</string>
    <string name="set_callsign_label">Set Callsign</string>
    <string name="state_label_receive">RX</string>
    <string name="state_label_transmit">TX</string>
    <string name="state_label_idle">IDLE</string>
    <string name="state_label_stop">STOP</string>
    <string name="state_label_rf">RSSI</string>
    <string name="bt_not_enabled">Bluetooth not enabled. Only USB devices can be connected.</string>
    <string name="version_label">Version %s</string>
    <string name="bert_receiver_label">BERT Receiver</string>
    <string name="bert_bits">BITS %d</string>
    <string name="bert_errors">ERRORS %d</string>
    <string name="bert_frames">FRAMES %d</string>
    <string name="can_hint">CAN</string>
    <string name="destination_hint">Destination</string>
    <string name="source_label">Source</string>
    <string name="destination_label">Destination</string>
    <string name="can_label">CAN</string>
    <string name="squelch_tooltip">Squelch level</string>
    <string name="squelch_seek_tooltip">Slide to adjust squelch level</string>
    <string name="pairing_rejected">Pairing attempt rejected</string>


    <!-- Preference Keys -->
    <string name="ble_device_key">BLE Device</string>
    <string name="call_sign">Call Sign</string>
    <string name="channel_access_number">M17 CAN</string>
    <string name="squelch">Squelch</string>

    <!-- Notification Channel -->
    <string name="channel_name">M17</string>
    <string name="channel_description">M17 Notifications</string>

</resources>